@@ -189,7 +189,8 @@
 		<ant antfile="build.xml" target="clean" dir="IGCAdapter" inheritall="true" />
 		<ant antfile="build.xml" target="clean" dir="GPXAdapter" inheritall="true" />
 		<ant antfile="build.xml" target="clean" dir="IISI-Cockpit V2" inheritall="true" />
-				<!-- add new device here -->
+		<ant antfile="build.xml" target="clean" dir="FutabaTelemetry" inheritall="true" />
+						<!-- add new device here -->
 	</target>
 
 	<!-- install target -->
@@ -352,7 +353,8 @@
 		<ant antfile="build.xml" target="package" dir="IGCAdapter" inheritall="true" />
 		<ant antfile="build.xml" target="package" dir="GPXAdapter" inheritall="true" />
 		<ant antfile="build.xml" target="package" dir="IISI-Cockpit V2" inheritall="true" />
-				<!-- add new device here -->
+		<ant antfile="build.xml" target="package" dir="FutabaTelemetry" inheritall="true" />
+						<!-- add new device here -->
 	</target>
 
 	<fileset dir="${basedir}">
@@ -379,7 +381,8 @@
 			<include name="IGCAdapter/build/*.jar" />
 			<include name="GPXAdapter/build/*.jar" />
 			<include name="IISI-Cockpit V2/build/*.jar" />
-			<!-- add new device here -->
+			<include name="FutabaTelemetry/build/*.jar" />
+						<!-- add new device here -->
 		</patternset>
 	</fileset>
 
